<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@drawable/pic9"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/picss"
        app:srcCompat="@drawable/picccccccccccccccc_removebg_preview" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit"
        android:drawableEnd="@drawable/ic_baseline_person_pin_24"
        android:ems="10"
        android:hint="@string/your_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/etGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"

        android:layout_marginRight="20dp"
        android:background="@drawable/edit"
        android:drawableEnd="@drawable/ic_person_24"
        android:ems="10"
        android:hint="@string/gender"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit"
        android:drawableEnd="@drawable/ic_age"
        android:ems="10"
        android:hint="@string/age"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit"
        android:drawableEnd="@drawable/ic_height_24"
        android:ems="10"
        android:hint="@string/height_in_feet"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit"
        android:drawableEnd="@drawable/ic_baseline_line_weight_24"
        android:ems="10"
        android:hint="@string/weight_in_kg"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="152dp"
        android:layout_height="54dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:layout_marginBottom="20dp"

        android:background="@color/black"
        android:fontFamily="@font/lusitana"
        android:gravity="center"
        android:text="@string/calculate"

        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="#1a1c20" />

</LinearLayout>